--- a/master.lyx
+++ b/master.lyx
@@ -4153,7 +4153,11 @@ Auswertung von Schaltkreisen
 \end_layout
 
 \begin_layout Definition
-Der Schaltkreis 
+Der 
+\begin_inset Formula $\left(\sigma,\mathbb{B}\right)$
+\end_inset
+
+-Schaltkreis 
 \begin_inset Formula $\mathcal{C}=\left(G,W,\Sigma,\Omega,U\right)$
 \end_inset
 
@@ -4326,7 +4330,7 @@ Sei
 \end_inset
 
 -stelliger 
-\begin_inset Formula $\left(\mathbb{B}_{\mathrm{std}},\left\{ E\right\} \right)$
+\begin_inset Formula $\left(\left\{ E\right\} ,\mathbb{B}_{\mathrm{std}}\right)$
 \end_inset
 
 -Schaltkreis, der alle Knoten eines gerichteten Graphen findet, die Teil
@@ -4762,7 +4766,11 @@ Ein
 \begin_inset Formula $k$
 \end_inset
 
--stelliger Schaltkreis 
+-stelliger 
+\begin_inset Formula $\left(\sigma,\mathbb{B}\right)$
+\end_inset
+
+-Schaltkreis 
 \begin_inset Formula $\mathcal{C}$
 \end_inset
 
@@ -4917,11 +4925,19 @@ Sei
 \begin_inset Formula $\mathcal{C}$
 \end_inset
 
- ein symmetrischer Schaltkreis, und 
+ ein symmetrischer 
+\begin_inset Formula $\left(\sigma,\mathbb{B}\right)$
+\end_inset
+
+-Schaltkreis, und 
 \begin_inset Formula $\mathfrak{A}$
 \end_inset
 
- eine beliebige Struktur mit 
+ eine beliebige 
+\begin_inset Formula $\sigma$
+\end_inset
+
+-Struktur mit 
 \begin_inset Formula $\left|A\right|=\left|U\right|$
 \end_inset
 
@@ -5772,19 +5788,15 @@ FO-Logik
 \end_layout
 
 \begin_layout Standard
-Die Formeln der Logik erster Stufe sind durch symmetrisches, 
+Die Formeln der Logik erster Stufe sind durch symmetrische, 
 \begin_inset Formula $P$
 \end_inset
 
--uniformes 
+-uniforme 
 \begin_inset Formula $\mathrm{AC}^{0}$
 \end_inset
 
- berechenbar:
-\end_layout
-
-\begin_layout Definition*
-.
+-Schaltkreise berechenbar:
 \end_layout
 
 \begin_layout Lemma
@@ -5823,7 +5835,7 @@ Jede
 \end_inset
 
  und polynomieller Größe 
-\begin_inset Formula $S_{n}\leqslant5\left\Vert \varphi\right\Vert n^{\mathtt{M}\left(\varphi\right)}$
+\begin_inset Formula $S_{n}\leqslant5\left\Vert \varphi\right\Vert n^{\mathtt{MF}\left(\varphi\right)}$
 \end_inset
 
  berechnet wird.
@@ -5876,7 +5888,7 @@ Per induktiver Konstruktion über den Aufbau von
 \begin_inset Formula $\hat{\pi}$
 \end_inset
 
- angegeben.
+ angegeben, und damit die Symmetrie nachgewiesen.
 \end_layout
 
 \begin_deeper
@@ -5921,19 +5933,19 @@ Für jedes Tupel
 \end{array}\right)$
 \end_inset
 
- die Abbildung der Variablen 
+ die Belegung der Variablen 
 \begin_inset Formula $\bar{x}$
 \end_inset
 
- auf das Tupel 
+ mit 
 \begin_inset Formula $\bar{t}$
 \end_inset
 
 :
 \begin_inset Formula 
 \begin{eqnarray*}
-\Omega\left(\bar{t}\right) & \coloneqq & g_{\bar{t}}\\
-\Sigma\left(g_{\bar{t}}\right) & \coloneqq & R\beta_{\bar{t}}\left(\bar{y}\right)
+\Sigma\left(g_{\bar{t}}\right) & \coloneqq & R\beta_{\bar{t}}\left(\bar{y}\right)\\
+\Omega\left(\bar{t}\right) & \coloneqq & g_{\bar{t}}
 \end{eqnarray*}
 
 \end_inset
@@ -5946,7 +5958,7 @@ Korrektheit: Es gilt
 \begin_inset Formula 
 \[
 \begin{array}{ccccc}
-\left\llbracket R\bar{x}\right\rrbracket \left(\mathfrak{A},\bar{t}\right)=1 & \overset{\mathrm{def}}{\Leftrightarrow} & \bar{t}\in R^{\mathfrak{A}} & \overset{\mathrm{def}}{\Leftrightarrow} & \mathcal{C}_{n}^{\varphi}\left[\mathfrak{A}\right]\left(g_{\bar{t}}\right)=1\end{array}
+\left\llbracket R\bar{x}\right\rrbracket \left(\mathfrak{A},\bar{t}\right)=1 & \overset{\mathrm{def}}{\Leftrightarrow} & \bar{t}\in R^{\mathfrak{A}} & \overset{\mathrm{def}}{\Leftrightarrow} & \mathcal{C}_{n}^{\varphi}\left[\mathfrak{A}\right]\left(\Omega\left(\bar{t}\right)\right)=1\end{array}
 \]
 
 \end_inset
@@ -6024,11 +6036,11 @@ Für jedes Tupel
  die entsprechende Belegung:
 \begin_inset Formula 
 \begin{eqnarray*}
-\Omega\left(\bar{t}\right) & \coloneqq & g_{\bar{t}}\\
 \Sigma\left(g_{\bar{t}}\right) & \coloneqq & \begin{cases}
 \mathbf{1} & \mathrm{falls}\,\beta\left(y_{1}\right)=\beta\left(y_{2}\right)\\
 \mathbf{0} & \mathrm{sonst}
-\end{cases}
+\end{cases}\\
+\Omega\left(\bar{t}\right) & \coloneqq & g_{\bar{t}}
 \end{eqnarray*}
 
 \end_inset
@@ -6041,7 +6053,7 @@ Korrektheit: Es gilt
 \begin_inset Formula 
 \[
 \begin{array}{ccccc}
-\left\llbracket y_{1}\dot{=}y_{2}\right\rrbracket \left(\mathfrak{A},\bar{t}\right)=1 & \overset{\mathrm{def}}{\Leftrightarrow} & \beta_{\bar{t}}y_{1}=\beta_{\bar{t}}y_{2} & \overset{\mathrm{def}}{\Leftrightarrow} & \mathcal{C}_{n}^{\varphi}\left[\mathfrak{A}\right]\left(g_{\bar{t}}\right)=1\end{array}
+\left\llbracket y_{1}\dot{=}y_{2}\right\rrbracket \left(\mathfrak{A},\bar{t}\right)=1 & \overset{\mathrm{def}}{\Leftrightarrow} & \beta_{\bar{t}}y_{1}=\beta_{\bar{t}}y_{2} & \overset{\mathrm{def}}{\Leftrightarrow} & \mathcal{C}_{n}^{\varphi}\left[\mathfrak{A}\right]\left(\Omega\left(\bar{t}\right)\right)=1\end{array}
 \]
 
 \end_inset
@@ -6100,13 +6112,13 @@ Falls
 Schaltkreis: 
 \begin_inset Formula 
 \begin{eqnarray*}
-\mathcal{C}_{n}^{\varphi} & \coloneqq & \left(G,W,\Sigma,\Omega,U\right)\\
-\mathcal{C}_{n}^{\varphi_{i}} & = & \left(G_{i},W_{i},\Sigma_{i},\Omega_{i},U\right)
+\mathcal{C}_{n}^{\varphi_{i}} & = & \left(G_{i},W_{i},\Sigma_{i},\Omega_{i},U\right)\\
+\mathcal{C}_{n}^{\varphi} & \coloneqq & \left(G,W,\Sigma,\Omega,U\right)
 \end{eqnarray*}
 
 \end_inset
 
- werden neue Outputs für jedes 
+Es werden neue Outputs für jedes 
 \begin_inset Formula $k$
 \end_inset
 
@@ -6117,7 +6129,7 @@ Schaltkreis:
  hinzugefügt:
 \begin_inset Formula 
 \begin{eqnarray*}
-G & \coloneqq & \biguplus_{i=1}^{\ell}G_{i}\uplus\left\{ g_{\bar{t}}\mid\bar{t}\in U^{k}\right\} 
+G & \coloneqq & \biguplus_{i=1}^{m}G_{i}\uplus\left\{ g_{\bar{t}}\mid\bar{t}\in U^{k}\right\} 
 \end{eqnarray*}
 
 \end_inset
@@ -6144,25 +6156,27 @@ Die Outputs werden entsprechend mit denen von
 
  frei vorkommenden Variablen reduziere:
 \begin_inset Formula 
-\[
-\mathrm{Sei}\,\left(\left(y_{i}\right)_{1},\cdots,\left(y_{i}\right)_{k_{i}}\right)=\left(x_{\left(j_{1}\right)},\cdots,x_{\left(j_{k_{i}}\right)}\right)
-\]
-
-\end_inset
-
-
-\begin_inset Formula 
 \begin{eqnarray*}
-\rho_{i}\left(t_{1},\cdots,t_{k}\right) & \coloneqq & \left(t_{\left(j_{1}\right)},\cdots,t_{\left(j_{k_{i}}\right)}\right)
+\mathrm{Sei}\,\,\,\bar{j} & \in & \left[1,k\right]^{k_{i}}\\
+\mathrm{so}\,\mathrm{dass}\,\,\,\bar{y_{i}} & = & \left(x_{\left(j_{1}\right)},\cdots,x_{\left(j_{k_{i}}\right)}\right)
 \end{eqnarray*}
 
 \end_inset
 
 
 \begin_inset Formula 
-\[
-W\coloneqq\biguplus_{i=1}^{\ell}W_{i}\uplus\left\{ \left(\Omega_{i}\left(\rho_{i}\bar{t}\right),g_{\bar{t}}\right)\mid1\leqslant i\leqslant\ell,\,\bar{t}\in U^{m}\right\} 
-\]
+\begin{eqnarray*}
+\mathrm{dann}\,\,\,\rho_{i}\left(t_{1},\cdots,t_{k}\right) & \coloneqq & \left(t_{\left(j_{1}\right)},\cdots,t_{\left(j_{k_{i}}\right)}\right)
+\end{eqnarray*}
+
+\end_inset
+
+
+\begin_inset Formula 
+\begin{eqnarray*}
+W & \coloneqq & \bigcup_{i=1}^{m}W_{i}\cup W_{\wedge}\\
+W_{\wedge} & \coloneqq & \left\{ \left(\Omega_{i}\left(\rho_{i}\bar{t}\right),g_{\bar{t}}\right)\mid1\leqslant i\leqslant m,\,\bar{t}\in U^{k}\right\} 
+\end{eqnarray*}
 
 \end_inset
 
@@ -6173,7 +6187,7 @@ Die Gates werden entsprechend beschriftet:
 \Sigma_{i}\left(g\right) & \mathrm{für}\,g\in G_{i}\\
 \wedge & \mathrm{sonst}
 \end{cases}\\
-\Omega\left(\bar{t}\right) & \coloneqq & g_{\bar{t}}\,\,\mathrm{für\,alle\,\,}\bar{t}\in U^{m'}
+\Omega\left(\bar{t}\right) & \coloneqq & g_{\bar{t}}\,\,\mathrm{für\,alle\,\,}\bar{t}\in U^{k}
 \end{eqnarray*}
 
 \end_inset
@@ -6182,11 +6196,15 @@ Die Gates werden entsprechend beschriftet:
 \end_layout
 
 \begin_layout Description
-Korrektheit: Es gilt 
+Korrektheit: Es gilt für 
+\begin_inset Formula $\bar{t}\in U^{k}$
+\end_inset
+
+: 
 \begin_inset Formula 
 \begin{eqnarray*}
-\left\llbracket \varphi_{1}\wedge\cdots\wedge\varphi_{k}\right\rrbracket \left(\mathfrak{A},\bar{t}\right) & = & \min_{1\leqslant i\leqslant k}\left\llbracket \varphi_{i}\right\rrbracket \left(\mathfrak{A},\bar{t}\right)\\
- & = & \min_{1\leqslant i\leqslant k}\mathcal{C}_{n}^{\varphi_{i}}\left[\mathfrak{A}\right]\left(\Omega_{i}\left(\rho_{i}\bar{t}\right)\right)\\
+\left\llbracket \varphi_{1}\wedge\cdots\wedge\varphi_{m}\right\rrbracket \left(\mathfrak{A},\bar{t}\right) & = & \min_{1\leqslant i\leqslant m}\left\llbracket \varphi_{i}\right\rrbracket \left(\mathfrak{A},\bar{t}\right)\\
+ & = & \min_{1\leqslant i\leqslant m}\mathcal{C}_{n}^{\varphi_{i}}\left[\mathfrak{A}\right]\left(\Omega_{i}\left(\rho_{i}\bar{t}\right)\right)\\
  & = & \mathcal{C}_{n}^{\varphi}\left[\mathfrak{A}\right]\left(g_{\bar{t}}\right)
 \end{eqnarray*}
 
@@ -6209,7 +6227,7 @@ Symmetrie: Es existieren bereits die Automorphismen
 \begin_inset Formula $\hat{\pi}$
 \end_inset
 
- erweitert diese:
+ erweitert diese wie folgt:
 \begin_inset Formula 
 \[
 \hat{\pi}\left(g\right)\coloneqq\begin{cases}
@@ -6239,15 +6257,16 @@ Für die neuen Kanten
  gilt nach Voraussetzung: 
 \begin_inset Formula 
 \begin{eqnarray*}
-\left(\hat{\pi}\Omega_{i}\left(\rho_{i}\bar{t}\right),\hat{\pi}g_{\bar{t}}\right) & = & \left(\hat{\pi}_{i}\Omega_{i}\left(\rho_{i}\bar{t}\right),\hat{\pi}g_{\bar{t}}\right)\\
- & = & \left(\Omega_{i}\left(\pi\rho_{i}\bar{t}\right),g_{\pi\bar{t}}\right)\\
- & = & \left(\Omega_{i}\left(\rho_{i}\pi\bar{t}\right),g_{\pi\bar{t}}\right)\in W
+\hat{\pi}W_{\wedge}=\left\{ \left(\Omega_{i}\left(\rho_{i}\bar{t}\right),g_{\bar{t}}\right)\mid1\leqslant i\leqslant m,\,\bar{t}\in U^{k}\right\}  & = & \left\{ \left(\hat{\pi}\Omega_{i}\left(\rho_{i}\bar{t}\right),\hat{\pi}g_{\bar{t}}\right)\mid1\leqslant i\leqslant m,\,\bar{t}\in U^{k}\right\} \\
+ & = & \left\{ \left(\hat{\pi}_{i}\Omega_{i}\left(\rho_{i}\bar{t}\right),g_{\pi\bar{t}}\right)\mid1\leqslant i\leqslant m,\,\bar{t}\in U^{k}\right\} \\
+ & = & \left\{ \left(\Omega_{i}\left(\rho_{i}\pi\bar{t}\right),g_{\pi\bar{t}}\right)\mid1\leqslant i\leqslant m,\,\bar{t}\in U^{k}\right\} \\
+ & = & W_{\wedge}
 \end{eqnarray*}
 
 \end_inset
 
-(Die Abbildung 
-\begin_inset Formula $\rho_{i}:U^{m}\rightarrow U^{m_{i}}$
+(Die Reduktion 
+\begin_inset Formula $\rho_{i}:U^{k}\rightarrow U^{k_{i}}$
 \end_inset
 
  ist ein Homomorphismus und kommutiert mit der Permutation 
@@ -6259,7 +6278,7 @@ Für die neuen Kanten
 
 \begin_layout Enumerate
 Es gilt 
-\begin_inset Formula $\Sigma\left(\hat{\pi}g_{\bar{t}}\right)=\Sigma\left(g_{\bar{t}}\right)=\vee$
+\begin_inset Formula $\Sigma\left(\hat{\pi}g_{\bar{t}}\right)=\Sigma\left(g_{\bar{t}}\right)=\wedge$
 \end_inset
 
 .
@@ -6267,7 +6286,7 @@ Es gilt
 
 \begin_layout Enumerate
 Es gilt 
-\begin_inset Formula $\Omega\left(\pi\bar{t}\right)=g_{\pi\bar{t}}=\hat{\pi}gv=\hat{\pi}\Omega\left(\bar{t}\right)$
+\begin_inset Formula $\hat{\pi}\Omega\left(\bar{t}\right)=\hat{\pi}g_{\bar{t}}=g_{\pi\bar{t}}=\Omega\left(\pi\bar{t}\right)$
 \end_inset
 
 .
@@ -6310,7 +6329,7 @@ Schaltkreis:
 \end_inset
 
 Für jedes Tupel 
-\begin_inset Formula $\bar{t}\in U^{m}$
+\begin_inset Formula $\bar{t}\in U^{k}$
 \end_inset
 
  wird ein neues Gate 
@@ -6326,8 +6345,9 @@ Für jedes Tupel
  
 \begin_inset Formula 
 \begin{eqnarray*}
-G & \coloneqq & G'\uplus\left\{ g_{\bar{t}}\mid\bar{t}\in U^{m}\right\} \\
-W & \coloneqq & W'\uplus\left\{ \left(\Omega'\left(\bar{t}\right),g_{\bar{t}}\right)\mid\bar{t}\in U^{m}\right\} \\
+G & \coloneqq & G'\uplus\left\{ g_{\bar{t}}\mid\bar{t}\in U^{k}\right\} \\
+W & \coloneqq & W'\cup W_{\neg}\\
+W_{\neg} & \coloneqq & \left\{ \left(\Omega'\left(\bar{t}\right),g_{\bar{t}}\right)\mid\bar{t}\in U^{k}\right\} \\
 \Sigma\left(g\right) & \coloneqq & \begin{cases}
 \Sigma'\left(g\right) & \mathrm{falls}\,g\in G'\\
 \neg & \mathrm{sonst}
@@ -6371,7 +6391,11 @@ g_{\pi\bar{t}} & \mathrm{falls}\,g=g_{\bar{t}}
 
 \end_inset
 
+Es gilt 
+\begin_inset Formula $\hat{\pi}W_{\neg}=\left\{ \left(\hat{\pi}\Omega'\left(\bar{t}\right),\hat{\pi}g_{\bar{t}}\right)\mid\bar{t}\in U^{k}\right\} =\left\{ \left(\Omega'\left(\pi\bar{t}\right),g_{\pi\bar{t}}\right)\mid\bar{t}\in U^{k}\right\} =W_{\neg}$
+\end_inset
 
+.
 \end_layout
 
 \end_deeper
@@ -6426,7 +6450,7 @@ Schaltkreis: Für jedes Tupel
 \begin_inset Formula 
 \begin{eqnarray*}
 G & \coloneqq & G_{1}\uplus G_{2}\\
- &  & \uplus\left\{ a_{\bar{t}},b_{\bar{t}},c_{\bar{t}},d_{\bar{t}},e_{\bar{t}}\mid\bar{t}\in U^{m}\right\} 
+ &  & \uplus\left\{ a_{\bar{t}},b_{\bar{t}},c_{\bar{t}},d_{\bar{t}},e_{\bar{t}}\mid\bar{t}\in U^{k}\right\} 
 \end{eqnarray*}
 
 \end_inset
@@ -6481,13 +6505,13 @@ Die Gates
  
 \begin_inset Formula 
 \begin{eqnarray*}
-W & \coloneqq & W_{1}\uplus W_{2}\\
- & \uplus & \left\{ \begin{array}{c}
-\left(\Omega_{1}\left(\rho_{1}\bar{t}\right),a_{\rho_{1}\bar{t}}\right),\,\left(\Omega_{2}\left(\rho_{2}\bar{t}\right),b_{\rho_{2}\bar{t}}\right),\\
+W & \coloneqq & W_{1}\cup W_{2}\cup W_{\neg}\cup W_{\wedge}\cup W_{\vee}\\
+W_{\neg} & \coloneqq & \left\{ \left(\Omega_{1}\left(\rho_{1}\bar{t}\right),a_{\rho_{1}\bar{t}}\right),\,\left(\Omega_{2}\left(\rho_{2}\bar{t}\right),b_{\rho_{2}\bar{t}}\right)\mid\bar{t}\in U^{k}\right\} \\
+W_{\wedge} & \coloneqq & \left\{ \begin{array}{c}
 \left(\Omega_{1}\left(\rho_{1}\bar{t}\right),c_{\bar{t}}\right),\,\left(\Omega_{2}\left(\rho_{2}\bar{t}\right),c_{\bar{t}}\right),\\
-\left(a_{\rho_{1}\bar{t}},d_{\bar{t}}\right),\,\left(b_{\rho_{2}\bar{t}},d_{\bar{t}}\right),\\
-\left(c_{\bar{t}},e_{\bar{t}}\right),\,\left(d_{\bar{t}},e_{\bar{t}}\right)
-\end{array}\mid\bar{t}\in U^{m}\right\} 
+\left(a_{\rho_{1}\bar{t}},d_{\bar{t}}\right),\,\left(b_{\rho_{2}\bar{t}},d_{\bar{t}}\right)
+\end{array}\mid\bar{t}\in U^{k}\right\} \\
+W_{\vee} & \coloneqq & \left\{ \left(c_{\bar{t}},e_{\bar{t}}\right),\,\left(d_{\bar{t}},e_{\bar{t}}\right)\mid\bar{t}\in U^{k}\right\} 
 \end{eqnarray*}
 
 \end_inset
@@ -6504,9 +6528,9 @@ W & \coloneqq & W_{1}\uplus W_{2}\\
 \begin_inset Formula 
 \begin{eqnarray*}
 \Sigma\left(g\right) & \coloneqq & \begin{cases}
-\neg & \mathrm{für}\,g\in\left\{ a_{\rho_{1}\bar{t}},b_{\rho_{2}\bar{t}}\mid\bar{t}\in U^{m}\right\} \\
-\wedge & \mathrm{für}\,g\in\left\{ c_{\bar{t}},d_{\bar{t}}\mid\bar{t}\in U^{m}\right\} \\
-\vee & \mathrm{für}\,g\in\left\{ e_{\bar{t}}\mid\bar{t}\in U^{m}\right\} \\
+\neg & \mathrm{für}\,g\in\left\{ a_{\rho_{1}\bar{t}},b_{\rho_{2}\bar{t}}\mid\bar{t}\in U^{k}\right\} \\
+\wedge & \mathrm{für}\,g\in\left\{ c_{\bar{t}},d_{\bar{t}}\mid\bar{t}\in U^{k}\right\} \\
+\vee & \mathrm{für}\,g\in\left\{ e_{\bar{t}}\mid\bar{t}\in U^{k}\right\} \\
 \Sigma_{i}\left(g\right) & \mathrm{für}\,g\in G_{i}
 \end{cases}
 \end{eqnarray*}
@@ -6525,7 +6549,7 @@ W & \coloneqq & W_{1}\uplus W_{2}\\
 \end_layout
 
 \begin_layout Description
-Korrektheit: Es gilt 
+Korrektheit: Es gilt: 
 \begin_inset Formula 
 \begin{eqnarray*}
 \left\llbracket \varphi\right\rrbracket \left(\mathfrak{A},\bar{t}\right) & = & \left\llbracket \left(\varphi_{1}\wedge\varphi_{2}\right)\vee\left(\neg\varphi_{1}\wedge\neg\varphi_{2}\right)\right\rrbracket \left(\mathfrak{A},\bar{t}\right)\\
@@ -6602,19 +6626,20 @@ Sei
 \begin_inset Formula $\rho:U^{k+m}\rightarrow U^{k}$
 \end_inset
 
- die Abbildung, die 
+ die Abbildung, die aus 
 \begin_inset Formula $\bar{z}$
 \end_inset
 
- auf die freien Variablen 
-\begin_inset Formula $\bar{x}$
+ die gebundenen Variablen 
+\begin_inset Formula $\bar{y}$
 \end_inset
 
- reduziere:
+ entferne:
 \begin_inset Formula 
 \begin{eqnarray*}
-\left(x_{1},\cdots,x_{k}\right) & = & \left(z_{\left(i_{i}\right)},\cdots,z_{\left(i_{k}\right)}\right)\\
-\rho\left(t_{1},\cdots,t_{k+m}\right) & \coloneqq & \left(t_{\left(i_{1}\right)},\cdots,t_{\left(i_{k}\right)}\right)
+\mathrm{Sei}\,\,\,\bar{i} & \in & \left[1,k\right]^{k}\\
+\mathrm{so}\,\mathrm{dass}\,\,\,\bar{x} & = & \left(z_{\left(i_{1}\right)},\cdots,z_{\left(i_{k}\right)}\right)\\
+\mathrm{dann}\,\,\,\rho\left(t_{1},\cdots,t_{k}\right) & \coloneqq & \left(t_{\left(i_{1}\right)},\cdots,t_{\left(i_{k}\right)}\right)
 \end{eqnarray*}
 
 \end_inset
@@ -6623,7 +6648,7 @@ Sei
 \end_layout
 
 \begin_layout Standard
-Es werden neue Outputs eingefügt:
+Es werden neue Outputs eingefügt.
 \begin_inset Formula 
 \begin{eqnarray*}
 G & \coloneqq & G'\uplus\left\{ g_{\bar{t}}\mid\bar{t}\in U^{k}\right\} 
@@ -6631,11 +6656,24 @@ G & \coloneqq & G'\uplus\left\{ g_{\bar{t}}\mid\bar{t}\in U^{k}\right\}
 
 \end_inset
 
+Jedes Gate 
+\begin_inset Formula $\Omega'\left(\bar{u}\right)$
+\end_inset
 
+ mit 
+\begin_inset Formula $\bar{u}\in U^{k+m}$
+\end_inset
+
+ wird mit dem Gate 
+\begin_inset Formula $g_{\rho\bar{u}}$
+\end_inset
+
+ verknüpft.
 \begin_inset Formula 
-\[
-\Omega\left(\bar{t}\right)\coloneqq g_{\bar{t}}
-\]
+\begin{eqnarray*}
+W & \coloneqq & W'\cup W_{\exists}\\
+W_{\exists} & \coloneqq & \left\{ \left(\Omega'\left(\bar{u}\right),g_{\rho\bar{u}}\right)\mid\bar{u}\in U^{k+m}\right\} 
+\end{eqnarray*}
 
 \end_inset
 
@@ -6658,22 +6696,10 @@ Die neuen Outputs werden mit
 
 \end_inset
 
-Jedes Gate 
-\begin_inset Formula $\Omega'\left(\bar{u}\right)$
-\end_inset
 
- mit 
-\begin_inset Formula $\bar{u}\in U^{k+m}$
-\end_inset
-
- wird mit dem Gate 
-\begin_inset Formula $g_{\rho\bar{u}}$
-\end_inset
-
- verknüpft:
 \begin_inset Formula 
 \[
-W\coloneqq W'\uplus\left\{ \left(\Omega'\left(\bar{u}\right),g_{\rho\bar{u}}\right)\mid\bar{u}\in U^{k+m}\right\} 
+\Omega\left(\bar{t}\right)\coloneqq g_{\bar{t}}
 \]
 
 \end_inset
@@ -6682,7 +6708,11 @@ W\coloneqq W'\uplus\left\{ \left(\Omega'\left(\bar{u}\right),g_{\rho\bar{u}}\rig
 \end_layout
 
 \begin_layout Description
-Korrektheit: Es gilt für 
+Korrektheit: Für 
+\begin_inset Formula $\bar{t}\in U^{k}$
+\end_inset
+
+ gilt: 
 \begin_inset Formula 
 \begin{eqnarray*}
 \left\llbracket \varphi\right\rrbracket \left(\mathfrak{A},\bar{t}\right) & = & \max_{\begin{subarray}{c}
@@ -6781,7 +6811,7 @@ Der so konstruierte Schaltkreis hat eine durch
 \end_inset
 
  beschränkte Tiefe und eine durch 
-\begin_inset Formula $5\left\Vert \varphi\right\Vert \cdot n^{\mathtt{M}\left(\varphi\right)}$
+\begin_inset Formula $5\left\Vert \varphi\right\Vert \cdot n^{\mathtt{MF}\left(\varphi\right)}$
 \end_inset
 
  beschränkte Größe.
@@ -6879,7 +6909,7 @@ Jede
 \end_inset
 
  und polynomieller Größe 
-\begin_inset Formula $S_{n}\leqslant5\left\Vert \varphi\right\Vert \left(2n+1\right)^{\mathtt{M}\left(\varphi\right)}$
+\begin_inset Formula $S_{n}\leqslant5\left\Vert \varphi\right\Vert \left(2n+1\right)^{\mathtt{MF}\left(\varphi\right)}$
 \end_inset
 
  berechnet wird.
@@ -6914,18 +6944,18 @@ Der Schaltkreis
 
 \begin_layout Proof
 Hierbei ist zu beachten, dass 
-\begin_inset Formula $U=\left\{ 1,\cdots,n\right\} $
+\begin_inset Formula $U=\left[1,n\right]$
 \end_inset
 
- keinesfalls mit dem Universum der Orakelstruktur 
+ disjunkt von dem Universum 
+\begin_inset Formula $\left[0,n\right]$
+\end_inset
+
+ der Orakelstruktur 
 \begin_inset Formula $\Upsilon\left(n\right)$
 \end_inset
 
- gleichzusetzen ist!
-\end_layout
-
-\begin_layout Proof
-Zur Unterscheidung wird das Universum 
+ sein muss! Zur Unterscheidung wird das Universum 
 \begin_inset Formula $\left[0,n\right]$
 \end_inset
 
@@ -6941,8 +6971,12 @@ Zur Unterscheidung wird das Universum
 \end_layout
 
 \begin_layout Proof
-Wir konstruieren zunächst den 
-\begin_inset Formula $\left(\sigma\uplus\left\{ \dot{\leqslant}\right\} ,\mathbb{B}_{\mathrm{std}}\right)$
+Wir konstruieren aus der 
+\begin_inset Formula $\mathrm{FO}\left[\sigma\cup\left\{ \leqslant\right\} \right]$
+\end_inset
+
+-Formel zunächst einen 
+\begin_inset Formula $\left(\sigma\cup\left\{ \leqslant\right\} ,\mathbb{B}_{\mathrm{std}}\right)$
 \end_inset
 
 -Schaltkreis 
@@ -6955,7 +6989,7 @@ Wir konstruieren zunächst den
 
  entsprechend dem vorhergehenden Beweis.
  Dieser hat offensichtlich die geforderte Größe 
-\begin_inset Formula $S_{n}=S_{2n+1}'=5\left\Vert \varphi\right\Vert \left(2n+1\right)^{\mathtt{M}\left(\varphi\right)}$
+\begin_inset Formula $S_{n}=S_{2n+1}'\leqslant5\left\Vert \varphi\right\Vert \left(2n+1\right)^{\mathtt{MF}\left(\varphi\right)}$
 \end_inset
 
 .
@@ -6963,7 +6997,7 @@ Wir konstruieren zunächst den
 
 \begin_layout Proof
 Daraus wird der 
-\begin_inset Formula $\left(\sigma\uplus\left\{ \dot{\leqslant}\right\} ,\mathbb{B}_{\mathrm{std}}\right)$
+\begin_inset Formula $\left(\sigma\cup\left\{ \leqslant\right\} ,\mathbb{B}_{\mathrm{std}}\right)$
 \end_inset
 
 -Schaltkreis 
